[Video Capture Service, ChromeOS] Run video capture service in browser process

Before this CL, the video capture service, on ChromeOS, would run in a
separate utility process unless the HAL v3 service was being used.

This CL changes this so that on ChromeOS the video capture service always
runs in the browser process. This is to mitigate an issue with screen
rotation events only being available in the browser process.

Bug: 891961
Change-Id: I4764f7cf131fff819e9e0f726d45bb86af09ed9f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1506604
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#641024}